--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,12 +4,13 @@ build:
   script:
       - npm install
   artifacts:
-    expirein: 1 days
+    expire_in: 1 days
     when: on_success
     paths:
         - node_modules/
+
 test:
    script:
-      - npm run test
+    - npm run test
   only:
-      build
+    - build
